Import Material modules

--- a/portfolio/libs/material/src/lib/navigation/navigation.component.html
+++ b/portfolio/libs/material/src/lib/navigation/navigation.component.html
@@ -16,11 +16,9 @@
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
-        (click)="drawer.toggle()"
-        *ngIf="isHandset$ | async">
+        (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>material</span>
     </mat-toolbar>
     <!-- Add Content Here -->
   </mat-sidenav-content>
