Tailwind Post CSS
https://nx.dev/recipes/other/using-tailwind-css-in-react

--- a/portfolio/apps/dashboard-app/dashboard/src/app/app.component.html
+++ b/portfolio/apps/dashboard-app/dashboard/src/app/app.component.html
@@ -1,1 +1,2 @@
-<portfolio-navigation></portfolio-navigation>
+<!--<portfolio-navigation></portfolio-navigation>-->
+<portfolio-splash></portfolio-splash>
