SplashComponent Play button & Routing

--- a/portfolio/libs/material/src/lib/splash/splash.component.html
+++ b/portfolio/libs/material/src/lib/splash/splash.component.html
@@ -1,26 +1,60 @@
 <main class="grid place-content-center h-full bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500">
   <div class="grid grid-cols-8">
-    <div class="grid place-content-center w-10 h-10 bg-blue-600 rounded-full animate-bounce">M</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-600 rounded-full animate-bounce">a</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-600 rounded-full animate-bounce">u</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-600 rounded-full animate-bounce">r</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-600 rounded-full animate-bounce">i</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-600 rounded-full animate-bounce">z</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-600 rounded-full animate-bounce">i</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-600 rounded-full animate-bounce">o</div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-600 rounded-full animate-bounce">
+      <p class="text-4xl">M</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-600 rounded-full animate-bounce">
+      <p class="text-4xl">a</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-600 rounded-full animate-bounce">
+      <p class="text-4xl">u</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-600 rounded-full animate-bounce">
+      <p class="text-4xl">r</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-600 rounded-full animate-bounce">
+      <p class="text-4xl">i</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-600 rounded-full animate-bounce">
+      <p class="text-4xl">z</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-600 rounded-full animate-bounce">
+      <p class="text-4xl">i</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-600 rounded-full animate-bounce">
+      <p class="text-4xl">o</p>
+    </div>
   </div>
   <div class="grid grid-cols-8">
-    <div class="grid place-content-center w-10 h-10 bg-blue-700 rounded-full animate-pulse">C</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-700 rounded-full animate-pulse">a</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-700 rounded-full animate-pulse">s</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-700 rounded-full animate-pulse">c</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-700 rounded-full animate-pulse">i</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-700 rounded-full animate-pulse">a</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-700 rounded-full animate-pulse">n</div>
-    <div class="grid place-content-center w-10 h-10 bg-blue-700 rounded-full animate-pulse">o</div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-700 rounded-full animate-pulse">
+      <p class="text-4xl">C</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-700 rounded-full animate-pulse">
+      <p class="text-4xl">a</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-700 rounded-full animate-pulse">
+      <p class="text-4xl">s</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-700 rounded-full animate-pulse">
+      <p class="text-4xl">c</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-700 rounded-full animate-pulse">
+      <p class="text-4xl">i</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-700 rounded-full animate-pulse">
+      <p class="text-4xl">a</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-700 rounded-full animate-pulse">
+      <p class="text-4xl">n</p>
+    </div>
+    <div class="grid place-content-center w-16 h-16 bg-blue-700 rounded-full animate-pulse">
+      <p class="text-4xl">o</p>
+    </div>
   </div>
   <div class="grid place-content-center my-10">
-    <button class="bg-blue-700 rounded-2xl w-fit p-3">Portfolio</button>
+    <button class="bg-red-500 rounded-full w-16 h-16 flex items-center justify-center" [routerLink]="['portfolio']">
+      <mat-icon style="display: inline-block; vertical-align: middle; scale: 2.8">play_circle_filled</mat-icon>
+    </button>
   </div>
 </main>
 
